--- a/index.html
+++ b/index.html
@@ -28,55 +28,26 @@
 <body>
   <a href="#mainContent" class="skip-link" id="skipLink">Skip to content</a>
   <div id="offlineIndicator" role="status" aria-live="polite">Offline</div>
-  <button
+  <div
     id="installPromptBanner"
-    type="button"
     hidden
-    aria-haspopup="dialog"
-    aria-controls="installGuideDialog"
+    role="region"
+    aria-live="polite"
   >
-    <span class="btn-icon icon-glyph icon-svg" aria-hidden="true">
-      <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-        <path
-          d="M12 3v9.75"
-          fill="none"
-          stroke="currentColor"
-          stroke-width="1.5"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-        />
-        <polyline
-          points="8.75 9.75 12 12.75 15.25 9.75"
-          fill="none"
-          stroke="currentColor"
-          stroke-width="1.5"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-        />
-        <path
-          d="M4.75 11.5H8.6L10.4 9h8.85L21 11.5"
-          fill="none"
-          stroke="currentColor"
-          stroke-width="1.5"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-        />
-        <rect
-          x="4.75"
-          y="12.5"
-          width="14.5"
-          height="7.25"
-          rx="1.75"
-          fill="none"
-          stroke="currentColor"
-          stroke-width="1.5"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-        />
-      </svg>
-    </span>
-    <span id="installPromptBannerText">Install Cine Power Planner on your device for quick access.</span>
-  </button>
+    <button
+      id="installPromptBannerAction"
+      type="button"
+      aria-haspopup="dialog"
+      aria-controls="installGuideDialog"
+    >
+      <span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xE0E0;</span>
+      Install Cine Power Planner on your device for quick access.
+    </button>
+    <button id="installPromptBannerDismiss" type="button">
+      <span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="essential">&#xF131;</span>
+      <span class="visually-hidden">Close</span>
+    </button>
+  </div>
   <header id="topBar">
     <a class="branding" href="index.html">
       <svg id="logo" viewBox="0 0 1024 1024" aria-hidden="true">
