Remove spare battery from 10h calculations

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
     <p><strong><span id="totalCurrent144Label">Total Current (at 14.4V):</span></strong> <span id="totalCurrent144">0.00</span> A</p>
     <p><strong><span id="totalCurrent12Label">Total Current (at 12V):</span></strong> <span id="totalCurrent12">0.00</span> A</p>
     <p><strong><span id="batteryLifeLabel">Runtime (estimated):</span></strong> <span id="batteryLife">0.00</span> <span id="batteryLifeUnit">hrs</span> <span id="runtimeAverageNote"></span></p>
-    <p><strong><span id="batteryCountLabel">Batteries for 10h shoot (incl. spare):</span></strong> <span id="batteryCount">–</span></p>
+    <p><strong><span id="batteryCountLabel">Batteries for 10h shoot:</span></strong> <span id="batteryCount">–</span></p>
     <p id="pinWarning" class="status-message" role="status" aria-live="polite" aria-describedby="batteryLabel"></p>
     <p id="dtapWarning" class="status-message" role="status" aria-live="polite" aria-describedby="batteryLabel"></p>
     <p id="hotswapWarning" class="status-message" role="status" aria-live="polite" aria-describedby="batteryHotswapLabel"></p>
@@ -2105,7 +2105,7 @@
         >
           <h3><span class="help-icon icon-glyph" aria-hidden="true" data-icon-font="essential">&#xF1F8;</span>Power Calculator</h3>
           <ul>
-            <li>Select a battery to see estimated runtime, current draw and required batteries for a 10&nbsp;h shoot (incl. spare).</li>
+            <li>Select a battery to see estimated runtime, current draw and required batteries for a 10&nbsp;h shoot.</li>
             <li>A temperature note helps account for runtime changes in hot or cold conditions.</li>
             <li>Warnings appear if the configuration exceeds battery output limits.</li>
             <li>Select a <strong>Battery Hotswap</strong> to factor in dual plates or adapters; its capacity and pin limits are merged into the calculation.</li>
