Improve install banner styling and dismissal

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       aria-controls="installGuideDialog"
     >
       <span
+        id="installPromptBannerIcon"
         class="install-banner-icon btn-icon icon-glyph"
         aria-hidden="true"
         data-icon-font="uicons"
@@ -54,7 +55,16 @@
       class="install-banner-dismiss"
       type="button"
     >
-      Not now
+      Dismiss
+    </button>
+    <button
+      id="installPromptBannerClose"
+      class="install-banner-close"
+      type="button"
+      aria-label="Dismiss"
+      title="Dismiss"
+    >
+      <span class="icon-glyph" aria-hidden="true" data-icon-font="essential">&#xF131;</span>
     </button>
   </div>
   <header id="topBar">
