Improve install banner styling and dismissal

--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@
       aria-controls="installGuideDialog"
     >
       <span
+        id="installPromptBannerIcon"
         class="install-banner-icon btn-icon icon-glyph"
         aria-hidden="true"
         data-icon-font="uicons"
-      >&#xE0E0;</span>
+      >&#xE9D4;</span>
       <span id="installPromptBannerText">Install Cine Power Planner on your device for quick access.</span>
     </button>
     <button
@@ -54,7 +55,7 @@
       class="install-banner-dismiss"
       type="button"
     >
-      Not now
+      Dismiss
     </button>
   </div>
   <header id="topBar">
