Hide cage selector and filter compatible cages

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         </div>
       </div>
 
-      <div class="form-row">
+      <div class="form-row hidden" id="cageSelectRow">
         <label for="cageSelect" id="cageLabel">Camera Cage:</label>
         <div class="select-wrapper">
           <select id="cageSelect" aria-labelledby="cageLabel"></select>
