Add reset button for accent color preference

--- a/index.html
+++ b/index.html
@@ -973,6 +973,9 @@
         <div class="form-row">
           <label for="accentColorInput" id="accentColorLabel">Accent color</label>
           <input type="color" id="accentColorInput" value="#001589" />
+          <button type="button" id="accentColorReset" class="inline-form-button">
+            Reset to default
+          </button>
         </div>
         <div class="form-row">
           <label for="settingsTemperatureUnit" id="settingsTemperatureUnitLabel">Temperature unit</label>
