Adjust auto gear multiselect sizing

--- a/index.html
+++ b/index.html
@@ -1090,7 +1090,7 @@
             <label for="autoGearMattebox" id="autoGearMatteboxLabel">Mattebox options</label>
             <select
               id="autoGearMattebox"
-              class="auto-gear-mattebox auto-gear-multiselect"
+              class="auto-gear-mattebox auto-gear-multiselect auto-gear-device-multiselect"
               multiple
               size="10"
             ></select>
@@ -1099,7 +1099,7 @@
             <label for="autoGearCameraHandle" id="autoGearCameraHandleLabel">Camera handles</label>
             <select
               id="autoGearCameraHandle"
-              class="auto-gear-camera-handle auto-gear-multiselect"
+              class="auto-gear-camera-handle auto-gear-multiselect auto-gear-device-multiselect"
               multiple
               size="10"
             ></select>
@@ -1108,7 +1108,7 @@
             <label for="autoGearViewfinderExtension" id="autoGearViewfinderExtensionLabel">Viewfinder extension</label>
             <select
               id="autoGearViewfinderExtension"
-              class="auto-gear-viewfinder-extension auto-gear-multiselect"
+              class="auto-gear-viewfinder-extension auto-gear-multiselect auto-gear-device-multiselect"
               multiple
               size="10"
             ></select>
@@ -1117,7 +1117,7 @@
             <label for="autoGearVideoDistribution" id="autoGearVideoDistributionLabel">Video distribution</label>
             <select
               id="autoGearVideoDistribution"
-              class="auto-gear-video-distribution auto-gear-multiselect"
+              class="auto-gear-video-distribution auto-gear-multiselect auto-gear-device-multiselect"
               multiple
               size="10"
             ></select>
@@ -1126,7 +1126,7 @@
             <label for="autoGearCamera" id="autoGearCameraLabel">Camera</label>
             <select
               id="autoGearCamera"
-              class="auto-gear-camera auto-gear-multiselect"
+              class="auto-gear-camera auto-gear-multiselect auto-gear-device-multiselect"
               multiple
               size="10"
             ></select>
@@ -1135,7 +1135,7 @@
             <label for="autoGearMonitor" id="autoGearMonitorLabel">Onboard monitor</label>
             <select
               id="autoGearMonitor"
-              class="auto-gear-monitor auto-gear-multiselect"
+              class="auto-gear-monitor auto-gear-multiselect auto-gear-device-multiselect"
               multiple
               size="10"
             ></select>
@@ -1144,7 +1144,7 @@
             <label for="autoGearWireless" id="autoGearWirelessLabel">Wireless transmitter</label>
             <select
               id="autoGearWireless"
-              class="auto-gear-wireless auto-gear-multiselect"
+              class="auto-gear-wireless auto-gear-multiselect auto-gear-device-multiselect"
               multiple
               size="10"
             ></select>
@@ -1153,7 +1153,7 @@
             <label for="autoGearMotors" id="autoGearMotorsLabel">FIZ motors</label>
             <select
               id="autoGearMotors"
-              class="auto-gear-motors auto-gear-multiselect"
+              class="auto-gear-motors auto-gear-multiselect auto-gear-device-multiselect"
               multiple
               size="10"
             ></select>
@@ -1162,7 +1162,7 @@
             <label for="autoGearControllers" id="autoGearControllersLabel">FIZ controllers</label>
             <select
               id="autoGearControllers"
-              class="auto-gear-controllers auto-gear-multiselect"
+              class="auto-gear-controllers auto-gear-multiselect auto-gear-device-multiselect"
               multiple
               size="10"
             ></select>
@@ -1171,7 +1171,7 @@
             <label for="autoGearDistance" id="autoGearDistanceLabel">FIZ distance devices</label>
             <select
               id="autoGearDistance"
-              class="auto-gear-distance auto-gear-multiselect"
+              class="auto-gear-distance auto-gear-multiselect auto-gear-device-multiselect"
               multiple
               size="10"
             ></select>
