--- a/index.html
+++ b/index.html
@@ -3080,7 +3080,7 @@
     role="alertdialog"
     aria-modal="true"
     aria-labelledby="powerWarningTitle"
-    aria-describedby="powerWarningMessage powerWarningPinsDetail powerWarningDtapDetail powerWarningAdvice"
+    aria-describedby="powerWarningMessage powerWarningLimitsHeading powerWarningPinsDetail powerWarningDtapDetail powerWarningAdvice"
   >
     <form method="dialog" class="modal-surface power-warning-dialog">
       <div class="power-warning-header">
@@ -3091,12 +3091,19 @@
         >&#xF26F;</span>
         <h3 id="powerWarningTitle">Battery cannot power this load</h3>
       </div>
-      <p id="powerWarningMessage"></p>
-      <ul class="power-warning-details">
-        <li id="powerWarningPinsDetail"></li>
-        <li id="powerWarningDtapDetail"></li>
-      </ul>
-      <p id="powerWarningAdvice">Choose another battery, reduce the draw, or add power distribution.</p>
+      <section class="power-warning-summary" aria-labelledby="powerWarningTitle">
+        <p id="powerWarningMessage"></p>
+      </section>
+      <section class="power-warning-section" aria-labelledby="powerWarningLimitsHeading">
+        <h4 id="powerWarningLimitsHeading">Output limits</h4>
+        <ul class="power-warning-details">
+          <li id="powerWarningPinsDetail"></li>
+          <li id="powerWarningDtapDetail"></li>
+        </ul>
+      </section>
+      <p id="powerWarningAdvice" class="power-warning-advice">
+        Choose another battery, reduce the draw, or add power distribution.
+      </p>
       <div class="dialog-actions">
         <button type="button" id="powerWarningCloseBtn" class="primary">Understood</button>
       </div>
