Refine auto gear multiselect sizing

--- a/index.html
+++ b/index.html
@@ -1090,7 +1090,7 @@
             <label for="autoGearMattebox" id="autoGearMatteboxLabel">Mattebox options</label>
             <select
               id="autoGearMattebox"
-              class="auto-gear-mattebox auto-gear-multiselect auto-gear-device-multiselect"
+              class="auto-gear-mattebox auto-gear-multiselect"
               multiple
               size="10"
             ></select>
@@ -1099,7 +1099,7 @@
             <label for="autoGearCameraHandle" id="autoGearCameraHandleLabel">Camera handles</label>
             <select
               id="autoGearCameraHandle"
-              class="auto-gear-camera-handle auto-gear-multiselect auto-gear-device-multiselect"
+              class="auto-gear-camera-handle auto-gear-multiselect"
               multiple
               size="10"
             ></select>
@@ -1108,7 +1108,7 @@
             <label for="autoGearViewfinderExtension" id="autoGearViewfinderExtensionLabel">Viewfinder extension</label>
             <select
               id="autoGearViewfinderExtension"
-              class="auto-gear-viewfinder-extension auto-gear-multiselect auto-gear-device-multiselect"
+              class="auto-gear-viewfinder-extension auto-gear-multiselect"
               multiple
               size="10"
             ></select>
@@ -1117,7 +1117,7 @@
             <label for="autoGearVideoDistribution" id="autoGearVideoDistributionLabel">Video distribution</label>
             <select
               id="autoGearVideoDistribution"
-              class="auto-gear-video-distribution auto-gear-multiselect auto-gear-device-multiselect"
+              class="auto-gear-video-distribution auto-gear-multiselect"
               multiple
               size="10"
             ></select>
@@ -1171,7 +1171,7 @@
             <label for="autoGearDistance" id="autoGearDistanceLabel">FIZ distance devices</label>
             <select
               id="autoGearDistance"
-              class="auto-gear-distance auto-gear-multiselect auto-gear-device-multiselect"
+              class="auto-gear-distance auto-gear-multiselect"
               multiple
               size="10"
             ></select>
