Refine PWA install banner layout

--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
       id="installPromptBannerDismiss"
       class="install-banner-dismiss"
       type="button"
+      aria-label="Dismiss"
     >
-      Dismiss
+      <span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xF131;</span>
+      <span class="visually-hidden">Dismiss</span>
     </button>
   </div>
   <header id="topBar">
