Update settings tab icons to UIcons

--- a/index.html
+++ b/index.html
@@ -835,7 +835,7 @@
             aria-hidden="true"
             data-icon-font="uicons"
           >
-            &#xEAC4;
+            &#xE5A3;
           </span>
           <span class="settings-tab-label">General</span>
         </button>
@@ -853,7 +853,7 @@
             aria-hidden="true"
             data-icon-font="uicons"
           >
-            &#xE467;
+            &#xE8AF;
           </span>
           <span class="settings-tab-label">Automatic Gear</span>
         </button>
@@ -871,7 +871,7 @@
             aria-hidden="true"
             data-icon-font="uicons"
           >
-            &#xE597;
+            &#xF392;
           </span>
           <span class="settings-tab-label">Accessibility</span>
         </button>
@@ -889,7 +889,7 @@
             aria-hidden="true"
             data-icon-font="uicons"
           >
-            &#xE825;
+            &#xE5BD;
           </span>
           <span class="settings-tab-label">Backup &amp; Restore</span>
         </button>
@@ -907,7 +907,7 @@
             aria-hidden="true"
             data-icon-font="uicons"
           >
-            &#xF2DF;
+            &#xE5C7;
           </span>
           <span class="settings-tab-label">Data &amp; Storage</span>
         </button>
@@ -925,7 +925,7 @@
             aria-hidden="true"
             data-icon-font="uicons"
           >
-            &#xF139;
+            &#xEA4F;
           </span>
           <span class="settings-tab-label">About &amp; Support</span>
         </button>
