Use gears icon for settings toggle

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         </span>
       </button>
       <button id="settingsButton" aria-label="Settings" aria-haspopup="dialog" aria-controls="settingsDialog" title="Settings">
-        <span class="icon-glyph settings-button-icon" aria-hidden="true" data-icon-font="uicons">&#xEAC4;</span>
+        <span class="icon-glyph settings-button-icon" aria-hidden="true" data-icon-font="uicons">&#xE8AF;</span>
       </button>
       <button id="helpButton" aria-label="Help" aria-haspopup="dialog" aria-controls="helpDialog" title="Help (press ?, H, F1 or Ctrl+/)">
         <span class="icon-glyph icon-text" aria-hidden="true" data-icon-font="uicons">?</span>
