Filter auto gear monitor defaults by display size

--- a/index.html
+++ b/index.html
@@ -1214,7 +1214,7 @@
                 </div>
                 <div class="auto-gear-field" hidden>
                   <label for="autoGearAddSelectorDefault" id="autoGearAddSelectorDefaultLabel">Default item</label>
-                  <input type="text" id="autoGearAddSelectorDefault" list="autoGearMonitorCatalog" />
+                  <select id="autoGearAddSelectorDefault"></select>
                 </div>
                 <div class="auto-gear-field auto-gear-checkbox-field" hidden>
                   <input type="checkbox" id="autoGearAddSelectorInclude" />
@@ -1257,7 +1257,7 @@
                 </div>
                 <div class="auto-gear-field" hidden>
                   <label for="autoGearRemoveSelectorDefault" id="autoGearRemoveSelectorDefaultLabel">Default item</label>
-                  <input type="text" id="autoGearRemoveSelectorDefault" list="autoGearMonitorCatalog" />
+                  <select id="autoGearRemoveSelectorDefault"></select>
                 </div>
                 <div class="auto-gear-field auto-gear-checkbox-field" hidden>
                   <input type="checkbox" id="autoGearRemoveSelectorInclude" />
@@ -1278,7 +1278,6 @@
           </div>
         </div>
         <datalist id="autoGearItemCatalog"></datalist>
-        <datalist id="autoGearMonitorCatalog"></datalist>
       </section>
       <section
         id="settingsPanel-accessibility"
