Update sidebar labels to remove Open wording

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           aria-haspopup="dialog"
           aria-controls="settingsDialog"
         >
-          Open Settings
+          Settings
         </button>
       </li>
       <li>
@@ -188,7 +188,7 @@
           aria-haspopup="dialog"
           aria-controls="helpDialog"
         >
-          Open Help Center
+          Help Center
         </button>
       </li>
     </ul>
