--- a/index.html
+++ b/index.html
@@ -1080,7 +1080,7 @@
           </button>
         </div>
         <div id="autoGearRulesList" class="auto-gear-rules" aria-live="polite"></div>
-        <div id="autoGearEditor" class="auto-gear-editor" hidden>
+        <div id="autoGearEditor" class="auto-gear-editor" hidden aria-hidden="true">
           <div class="form-row">
             <label for="autoGearRuleName" id="autoGearRuleNameLabel">Rule name</label>
             <input type="text" id="autoGearRuleName" />
